changed index styling

--- a/index.html
+++ b/index.html
@@ -39,30 +39,37 @@
       </div>
     </section>
   </div>
+    
+  
+    <div class="section group lessons">  
+    <section class="col span_4_of_5">
+      <img src="images/archery-targets.jpg" alt="instructors">
+      <h2>Instructors</h2>
+      <p>Learn about our instructors and their years of experience.</p>
+      <p><a href="instructors.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+    </section>
+    </div>
   <!-- Content/Media Section this page only -->
   <div class="section group lessons">  
     <section class="col span_2_of_4">
       <h2>Classes</h2>
       <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
-      <ul>
-        <li>A101 Beginners</li>
-        <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i></li>
-        <li>A102 Intermediate</li>
-        <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i></li>
-        <li>A103 Advanced</li>
-      </ul>
       <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
     </section>
-    <section class="col span_1_of_4">
+    <section class="col span_2_of_4">
       <h2>Private Lessons</h2>
-      <p>Lessons and guidance provided by expert USA Archery certified coach.</p>
+      <p>Lessons and guidance provided by expert USA Archery certified coaches. Improve your skills with one on one instruction.</p>
       <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
     </section>
-    <section class="aside col span_1_of_4">
-      <h4>Training / Competition Video</h4>
-      <iframe width="100%" height="auto" src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-      <p><em>Don't end up like these guys. Get expert training from STP Archery now!</em></p>
-    </section>
+      
+  </div>
+  
+    <div class="section group">  
+    <section class="aside col span_4_of_5">
+        <h4>Training / Competition Video</h4>
+        <iframe width="100%" height=400px src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        <p><em>Don't end up like these guys. Get expert training from STP Archery now!</em></p>
+      </section>
   </div>
   <!-- Policy Note, for all pages -->   
   <div class="section group">  
