Add social media icons

--- a/about.html
+++ b/about.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>About - STP Archery</title>
+  <title>Home - STP Archery</title>
+  <!-- STP Archery Logo within the header -->
+  <link rel="shortcut icon" href="images/logosm.png" type="image/x-icon" /> 
   <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
+  <!-- Google Font Cutive for titles and Montserrat or Open Sans for body text -->
+  <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
 <body>
@@ -13,7 +16,7 @@
     <div class="col span_4_of_4">
       <header>
         <a href="index.html"><img src="images/logo.jpg" alt="STP Archery Logo"></a>
-        <h2>Straight to the Point Archery</h2>
+        <h1>Straight to the Point Archery</h1>
       </header>
     </div>
   </section>
@@ -61,7 +64,7 @@
     <!-- END Dax assigned working section -->      
   </main>
   <div class="section group">  
-    <section class="col span_4_of_4 policy">
+    <section class="col span_4_of_5 policy">
       <h3>Nondiscriminatory Policy:</h3>
       <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
     </section> 
@@ -75,7 +78,14 @@
       <div class="mapWrapper">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" allowfullscreen></iframe>
       </div>
-      <h5>&copy;STP Archery 2017. All rights reserved</h5>
+       <!--Social Media links-->
+      <div class="socialmedia">
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+        <!--Copyright info-->   
+        <h5>&copy;STP Archery 2017. All rights reserved</h5>
+      </div>
     </nav>
   </footer>
 </body>
