--- a/index.html
+++ b/index.html
@@ -35,21 +35,20 @@
       <div class="intro">    
         <h2>Home</h2>
         <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-        <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+        <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
       </div>
     </section>
   </div>
     
-  
+    <!--block sections to other pages-->
     <div class="section group lessons">  
-    <section class="col span_4_of_5">
-      <img src="images/archery-targets.jpg" alt="instructors">
+    <section class="col span_4_of_5 index">
+      <img src="images/derek-jenkins-instructor.png" alt="instructors">
       <h2>Instructors</h2>
-      <p>Learn about our instructors and their years of experience.</p>
+      <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
       <p><a href="instructors.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
     </section>
     </div>
-  <!-- Content/Media Section this page only -->
   <div class="section group lessons">  
     <section class="col span_2_of_4">
       <h2>Classes</h2>
@@ -58,13 +57,14 @@
     </section>
     <section class="col span_2_of_4">
       <h2>Private Lessons</h2>
-      <p>Lessons and guidance provided by expert USA Archery certified coaches. Improve your skills with one on one instruction.</p>
+      <p>Lessons and individual guidance provided by one of our expert USA Archery certified coaches.</p>
       <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
     </section>
       
   </div>
   
-    <div class="section group">  
+  <!-- Embedded Video Section -->
+  <div class="section group">  
     <section class="aside col span_4_of_5">
         <h4>Training / Competition Video</h4>
         <iframe width="100%" height=400px src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
@@ -73,7 +73,7 @@
   </div>
   <!-- Policy Note, for all pages -->   
   <div class="section group">  
-    <section class="col span_4_of_4 policy">
+    <section class="col span_4_of_5 policy">
       <h3>Nondiscriminatory Policy:</h3>
       <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
     </section> 
@@ -86,8 +86,15 @@
       <!--Google Map-->
       <div class="mapWrapper">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" allowfullscreen></iframe>
-        </div>
-      <h5>&copy;STP Archery 2017. All rights reserved</h5>
+      </div>
+      <!--Social Media links-->
+      <div class="socialmedia">
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+        <!--Copyright info-->   
+        <h5>&copy;STP Archery 2017. All rights reserved</h5>
+      </div>
     </nav>
   </footer>
 </body>
