--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Services - STP Archery</title>
   <!-- STP Archery Logo within the header -->
-  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" /> 
+  <link rel="shortcut icon" href="images/logosm.png" type="image/x-icon" /> 
   
   <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
   <!-- Google Font Cutive for titles and Montserrat or Open Sans for body text -->
